--- a/.github/workflows/main_testwebapp.yml
+++ b/.github/workflows/main_testwebapp.yml
@@ -25,7 +25,7 @@ jobs:
         uses: NuGet/setup-nuget@v1.0.5
 
       - name: Restore NuGet packages
-        run: nuget restore Projet-DL.sln
+        run: nuget restore projet.py
 
       - name: Publish to folder
         run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
@@ -65,3 +65,4 @@ jobs:
           package: .
 
           
+
